--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -841,8 +841,9 @@ section {
 # Call To Action Section
 --------------------------------------------------------------*/
 .call-to-action .container {
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/cta-bg.jpg") center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/demo-video-bg.png") center center;
   background-size: cover;
+  /* height: 450px; */
   padding: 100px 60px;
   border-radius: 15px;
   overflow: hidden;
