Image slider added

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2878,3 +2878,11 @@ section {
   max-width: 80%;
   height: auto;
 }
+
+.image-slider{
+  background-color: #7e8091;
+  width: 100%;
+  height: auto;
+  padding: 30px 15px 30px 15px;
+  justify-content: center;
+}
